# AsynRedisOperate

./: PlayerDataServer.sln  README.md
DSSDK/: CopyToIssue.bat  DSSDK.sln  DSSDK.vcproj  DSSDK_2012.sln  compile_sdk_without_update.sh  configure.in  convert.py  sdk_compile.sh
DSSDK/include/: BaseType.h  DateTime.h  Delegate.h  EncryptCRC.h  IThread.h  LogFile.h  LogSystem.h  Singleton.h  TimeSystem.h  Utility.h  lock.h
DSSDK/lib/: DSSDKD.lib
DSSDK/src/: DataCell.cpp  DataLine.cpp  DateTime.cpp  EncryptCRC.cpp  IThread.cpp  LogFile.cpp  LogSystem.cpp  TimeSystem.cpp  Utility.cpp  lock.cpp
PlayerDataServer/: PlayerDataServer.vcproj  compile_withnot_update.sh  configure.in  convert.py  playerdataserver_compile.sh
PlayerDataServer/Debug/: BuildLog.htm  mt.dep  vc90.idb
PlayerDataServer/Server/: ClientConnOnPlayerDataSrv.cpp  ClientConnOnPlayerDataSrv.h  ClientConnOnPlayerDataSrvMgr.cpp  ClientConnOnPlayerDataSrvMgr.h  DBCommandCallback_Player.cpp  DBCommandCallback_Player.h  DBCommandFactoryRegister.cpp  DBCommand_Personalbase.cpp  DBCommand_Personalbase.h  DBCommand_Player.cpp  DBCommand_Player.h  HeroDataAndOperate.h  MailMgr.cpp  MailMgr.h  MsgHandler.cpp  MsgHandler.h  PersonalBase.cpp  PersonalBase.h  PersonalBaseManager.cpp  PersonalBaseManager.h  Player.cpp  Player.h  PlayerDataServer.cpp  PlayerDataServer.h  PlayerManager.cpp  RegisterAllPacketFactory.cpp  WorldServerConnector.cpp  WorldServerConnector.h  main.cpp  playermanager.h
common/: AssertDefine.cpp  AssertDefine.h  GlobalDefine.h  ServerBase.cpp  ServerBase.h  ServerDefine.h
common/redisdb/: DBCommand.h  DBCommandCallBack.cpp  DBCommandCallBack.h  DBCommandCallBackPool.cpp  DBCommandCallBackPool.h  DBCommandCallbackFactory.h  DBCommandCallbackFactoryManager.cpp  DBCommandCallbackFactoryManager.h  DBCommandCreator.cpp  DBCommandCreator.h  DBCommandFactory.h  DBCommandFactoryManager.cpp  DBCommandFactoryManager.h  DBCommandOperate.cpp  DBCommandOperate.h  DBCommandPool.cpp  DBCommandPool.h  DBConnectThread.cpp  DBConnectThread.h  DBThreadPool.cpp  DBThreadPool.h  RedisConnector.cpp  RedisConnector.h
common/redisdb/hiredis/: Makefile  dict.c  example.c  net.c  (+4 more)
