#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(libDSSDK.a, VERSION, BUG-REPORT-ADDRESS)
AM_INIT_AUTOMAKE(libDSSDK.a,1.0)
#AC_CONFIG_SRCDIR([include/NetConnection.h])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
# AC_PROG_LIBTOOL
PTHREAD_PRESENT=""
AC_CHECK_LIB(pthread,pthread_create,PTHREAD_PRESENT="yes",,$PTHREAD_LIBS -lpthread)
if test "x$PTHREAD_PRESENT" = "xyes";then
AC_DEFINE(HAVE_LIBPTHREAD,1,[Define if libpthread is present])
PTHREAD_LIBS="-lpthread"
AC_SUBST(PTHREAD_LIBS)
fi

# Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS([memory.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STDBOOL
#AC_C_CONST
#AC_C_INLINE
#AC_TYPE_SIZE_T
#AC_STRUCT_TM

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([gethostbyname memmove memset socket])

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile)
